@@ -2,6 +2,9 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - ensure "enum" value is an array
+          - allow "$recursiveRef" to contain a non-empty fragment as long as
+            the target "$recursiveAnchor" has a canonical uri that does not
+            have a non-empty fragment
 
 0.013     2020-09-15 19:14:53Z
           - detect more cases of resource identifier collisions
